--- a/index.html
+++ b/index.html
@@ -42,17 +42,13 @@
         .section h2 { font-size: clamp(1rem, 3.5vh, 2rem); color: #7f1d1d; text-transform: uppercase; font-weight: 800; }
         .info { font-size: clamp(0.9rem, 3vh, 1.8rem); font-weight: bold; }
 
-        /* CONTROLES E BOTÕES */
         .controls { background: #020617; padding: 2vmin; display: flex; justify-content: center; flex-wrap: wrap; gap: 1.5vmin; }
 
         button {
-            /* Fonte fluida: ajusta entre 0.7rem e 1.4rem dependendo da tela */
             font-size: clamp(0.7rem, 2.5vw, 1.4rem); 
             padding: 1.5vh 1vw; 
             border: none; border-radius: 10px; cursor: pointer; font-weight: bold; 
             flex: 1; min-width: 110px; transition: transform 0.05s;
-            
-            /* Impede que o texto quebre ou saia do botão */
             display: flex; align-items: center; justify-content: center;
             white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
         }
@@ -62,17 +58,16 @@
         .mat { background: #334155; color: #fff; }
         .reset { background: #f59e0b; color: #000; }
 
-        /* RODAPÉ AJUSTADO */
         .footer { 
             background: #020617; text-align: center; 
             padding: 2vh 1vw; 
-            /* Negrito e tamanho ajustável */
             font-weight: 900; 
             font-size: clamp(0.6rem, 2.2vw, 1.2rem); 
             color: #ffffff; 
             border-top: 1px solid #1f2937;
-            text-transform: uppercase;
-            letter-spacing: 1px;
+            /* Alterado para manter apenas as primeiras letras maiúsculas */
+            text-transform: none; 
+            letter-spacing: 0.5px;
         }
     </style>
 </head>
@@ -82,17 +77,17 @@
     <div class="header">
         <h1>SENHA EM ATENDIMENTO</h1>
         <div class="senha-principal" id="senha">--</div>
-        <div class="setor-principal" id="setor">AGUARDANDO</div>
+        <div class="setor-principal" id="setor">Aguardando</div>
     </div>
 
     <div class="content">
         <div class="section">
-            <h2>DOCUMENTAÇÃO</h2>
+            <h2>Documentação</h2>
             <div class="info">Atendendo: <strong id="docAtual">--</strong></div>
             <div class="info">Próxima: <strong id="docProx">1</strong></div>
         </div>
         <div class="section">
-            <h2>MATRÍCULA</h2>
+            <h2>Matrícula</h2>
             <div class="info">Atendendo: <strong id="matAtual">--</strong></div>
             <div class="info">Próxima: <strong id="matProx">1</strong></div>
         </div>
@@ -152,12 +147,12 @@
             updates['docAtual'] = d.docProx;
             updates['senha'] = d.docProx;
             updates['docProx'] = d.docProx + 1;
-            updates['setor'] = "DOCUMENTAÇÃO";
+            updates['setor'] = "Documentação";
         } else {
             updates['matAtual'] = d.matProx;
             updates['senha'] = d.matProx;
             updates['matProx'] = d.matProx + 1;
-            updates['setor'] = "MATRÍCULA";
+            updates['setor'] = "Matrícula";
         }
         updates['trigger'] = Date.now();
         await update(estadoRef, updates);
@@ -168,7 +163,7 @@
         const dados = snap.val();
 
         document.getElementById('senha').textContent = dados.senha || "--";
-        document.getElementById('setor').textContent = dados.setor || "AGUARDANDO";
+        document.getElementById('setor').textContent = dados.setor || "Aguardando";
         document.getElementById('docAtual').textContent = dados.docAtual || "--";
         document.getElementById('docProx').textContent = dados.docProx || "1";
         document.getElementById('matAtual').textContent = dados.matAtual || "--";
@@ -186,7 +181,7 @@
     document.getElementById('btnMat').onclick = () => incrementarSenha("MATRICULA");
     document.getElementById('btnReset').onclick = async () => {
         if (confirm("Redefinir painel?")) {
-            await set(estadoRef, { docAtual: "--", docProx: 1, matAtual: "--", matProx: 1, senha: "--", setor: "AGUARDANDO", trigger: 0 });
+            await set(estadoRef, { docAtual: "--", docProx: 1, matAtual: "--", matProx: 1, senha: "--", setor: "Aguardando", trigger: 0 });
         }
     };
 </script>
