--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         .header { flex: 0 0 auto; background: #991b1b; text-align: center; padding: 2vh; border-bottom: 5px solid #fde047; }
         .header h1 { font-size: clamp(1.2rem, 4vh, 3rem); text-transform: uppercase; font-weight: 900; }
         
+        /* ANIMAÇÃO DA SENHA */
         .senha-principal { 
             font-size: clamp(3.5rem, 22vh, 18rem); 
             font-weight: 900; color: #fde047; 
@@ -29,7 +30,17 @@
             text-shadow: 4px 4px 0px rgba(0,0,0,0.5); 
         }
 
-        .setor-principal { font-size: clamp(1.1rem, 5vh, 4.5rem); font-weight: bold; }
+        /* Classe para o efeito de piscar */
+        .piscar {
+            animation: flash 0.8s ease-in-out 3; /* Pisca 3 vezes */
+        }
+
+        @keyframes flash {
+            0%, 100% { opacity: 1; transform: scale(1); }
+            50% { opacity: 0.3; transform: scale(1.05); color: #fff; }
+        }
+
+        .setor-principal { font-size: clamp(1.1rem, 5vh, 4.5rem); font-weight: bold; text-transform: uppercase; }
 
         .content { flex: 1; display: flex; gap: 2vmin; padding: 2vmin; align-items: stretch; }
 
@@ -51,6 +62,7 @@
             flex: 1; min-width: 110px; transition: transform 0.05s;
             display: flex; align-items: center; justify-content: center;
             white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+            text-transform: uppercase;
         }
         button:active { transform: scale(0.95); }
 
@@ -65,7 +77,6 @@
             font-size: clamp(0.6rem, 2.2vw, 1.2rem); 
             color: #ffffff; 
             border-top: 1px solid #1f2937;
-            /* Alterado para manter apenas as primeiras letras maiúsculas */
             text-transform: none; 
             letter-spacing: 0.5px;
         }
@@ -77,17 +88,17 @@
     <div class="header">
         <h1>SENHA EM ATENDIMENTO</h1>
         <div class="senha-principal" id="senha">--</div>
-        <div class="setor-principal" id="setor">Aguardando</div>
+        <div class="setor-principal" id="setor">AGUARDANDO</div>
     </div>
 
     <div class="content">
         <div class="section">
-            <h2>Documentação</h2>
+            <h2>DOCUMENTAÇÃO</h2>
             <div class="info">Atendendo: <strong id="docAtual">--</strong></div>
             <div class="info">Próxima: <strong id="docProx">1</strong></div>
         </div>
         <div class="section">
-            <h2>Matrícula</h2>
+            <h2>MATRÍCULA</h2>
             <div class="info">Atendendo: <strong id="matAtual">--</strong></div>
             <div class="info">Próxima: <strong id="matProx">1</strong></div>
         </div>
@@ -124,6 +135,13 @@
     let ultimoTimestampProcessado = 0;
 
     function executarChamadaVoz(senha, setor) {
+        // Efeito Visual de Piscar
+        const elSenha = document.getElementById('senha');
+        elSenha.classList.remove('piscar');
+        void elSenha.offsetWidth; // Force reflow para reiniciar animação
+        elSenha.classList.add('piscar');
+
+        // Áudio
         const audio = document.getElementById('tindon');
         audio.pause();
         audio.currentTime = 0;
@@ -147,12 +165,12 @@
             updates['docAtual'] = d.docProx;
             updates['senha'] = d.docProx;
             updates['docProx'] = d.docProx + 1;
-            updates['setor'] = "Documentação";
+            updates['setor'] = "DOCUMENTAÇÃO";
         } else {
             updates['matAtual'] = d.matProx;
             updates['senha'] = d.matProx;
             updates['matProx'] = d.matProx + 1;
-            updates['setor'] = "Matrícula";
+            updates['setor'] = "MATRÍCULA";
         }
         updates['trigger'] = Date.now();
         await update(estadoRef, updates);
@@ -163,7 +181,7 @@
         const dados = snap.val();
 
         document.getElementById('senha').textContent = dados.senha || "--";
-        document.getElementById('setor').textContent = dados.setor || "Aguardando";
+        document.getElementById('setor').textContent = dados.setor || "AGUARDANDO";
         document.getElementById('docAtual').textContent = dados.docAtual || "--";
         document.getElementById('docProx').textContent = dados.docProx || "1";
         document.getElementById('matAtual').textContent = dados.matAtual || "--";
@@ -181,7 +199,7 @@
     document.getElementById('btnMat').onclick = () => incrementarSenha("MATRICULA");
     document.getElementById('btnReset').onclick = async () => {
         if (confirm("Redefinir painel?")) {
-            await set(estadoRef, { docAtual: "--", docProx: 1, matAtual: "--", matProx: 1, senha: "--", setor: "Aguardando", trigger: 0 });
+            await set(estadoRef, { docAtual: "--", docProx: 1, matAtual: "--", matProx: 1, senha: "--", setor: "AGUARDANDO", trigger: 0 });
         }
     };
 </script>
