--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Painel ETEC - Harmonia Visual</title>
+    <title>Painel ETEC - Ajuste de Visibilidade</title>
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
         
@@ -22,39 +22,40 @@
 
         /* HEADER */
         .header { 
-            flex: 1.2; 
+            flex: 1.5; /* Aumentado para dar mais destaque à parte superior */
             background: #991b1b; 
             text-align: center; 
             display: flex; flex-direction: column; justify-content: center;
-            padding: 1vh 2vw; 
+            padding: 1.5vh 2vw; 
             border-bottom: 6px solid #fde047; 
         }
 
-        /* TÍTULOS PADRONIZADOS (SENHA EM ATENDIMENTO = DOCUMENTAÇÃO = MATRÍCULA) */
         .header h1, .section h2 { 
             font-size: clamp(1.1rem, 5vh, 3.5rem); 
             text-transform: uppercase; 
             font-weight: 900; 
             letter-spacing: 1px;
-            line-height: 1.2;
         }
 
         .senha-principal { 
-            font-size: clamp(4rem, 32vh, 25rem); 
+            font-size: clamp(4rem, 35vh, 25rem); 
             font-weight: 900; color: #fde047; 
             line-height: 0.8; margin: 0.5vh 0;
             text-shadow: 5px 5px 0px rgba(0,0,0,0.5); 
         }
 
+        /* SETOR SUPERIOR AMPLIADO */
         .setor-principal { 
-            font-size: clamp(1.2rem, 7vh, 5rem); 
-            font-weight: 800; text-transform: uppercase; 
+            font-size: clamp(1.8rem, 9vh, 6rem); /* Aumentado conforme solicitado */
+            font-weight: 800; 
+            text-transform: uppercase;
+            color: #ffffff;
+            margin-top: 1vh;
         }
 
-        /* RETÂNGULOS ACHATADOS E TEXTOS INTERNOS IGUALADOS */
         .content { 
             flex: 0 0 auto; 
-            height: 22vh; /* Altura achatada */
+            height: 20vh; 
             display: flex; gap: 1.5vmin; padding: 1.5vmin; 
         }
 
@@ -64,52 +65,51 @@
             padding: 1vh;
         }
 
-        /* Textos Internos (Atendendo e Próxima agora com a mesma escala) */
         .info { 
             font-size: clamp(0.9rem, 3.8vh, 2.2rem); 
             font-weight: bold; 
-            white-space: nowrap;
         }
         .info strong { color: #991b1b; }
 
-        /* CONTROLES RESPONSIVOS (Anti-Corte) */
         .controls { 
             flex: 0 0 auto; background: #020617; 
             padding: 1.5vh; display: flex; flex-wrap: wrap; gap: 1vh; 
         }
 
         button {
-            /* Fonte do botão diminui para caber em qualquer tela */
             font-size: clamp(0.65rem, 2vh, 1.2rem); 
             padding: 1.5vh 1vw; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; 
             flex: 1; min-width: 100px; 
             display: flex; align-items: center; justify-content: center;
-            text-transform: none; transition: transform 0.05s;
         }
-        button:active { transform: scale(0.95); }
 
         .doc { background: #dc2626; color: #fff; }
         .mat { background: #334155; color: #fff; }
         .reset { background: #f59e0b; color: #000; }
 
+        /* RODAPÉ AJUSTADO E AMPLIADO */
         .footer { 
-            flex: 0 0 auto; background: #000; text-align: center; 
-            padding: 1vh; font-weight: 900; 
-            font-size: clamp(0.5rem, 1.6vh, 0.9rem); 
-            color: #ffffff; border-top: 1px solid #334155;
+            flex: 0 0 auto; 
+            background: #000; 
+            text-align: center; 
+            padding: 1.5vh 2vw; /* Mais respiro para não colar na borda */
+            font-weight: 900; 
+            /* Tamanho da fonte aumentado */
+            font-size: clamp(0.7rem, 2vh, 1.2rem); 
+            color: #ffffff; 
+            border-top: 1px solid #334155;
+            white-space: nowrap; /* Evita quebra de linha que causa o corte visual */
+            overflow: hidden;
+            text-overflow: ellipsis; /* Se a tela for minúscula, ele encurta graciosamente */
         }
 
-        /* Ajustes específicos para Celular em pé (Portrait) */
         @media (max-width: 600px) and (orientation: portrait) {
-            .header { flex: 2; }
-            .content { height: 32vh; flex-direction: column; }
-            .senha-principal { font-size: 22vh; }
-            .section h2 { font-size: 2.8vh; }
-            .info { font-size: 2.4vh; }
-            button { min-width: 45%; } /* Botões em grade 2x2 no celular */
+            .header { flex: 2.5; }
+            .content { height: 30vh; flex-direction: column; }
+            .setor-principal { font-size: 5vh; } /* Ajuste fino para celular */
+            .footer { font-size: 1.5vh; white-space: normal; } /* Permite quebra apenas se muito necessário em telas minúsculas */
         }
 
-        /* Animação */
         .piscar { animation: flash 0.6s ease-in-out 3; }
         @keyframes flash {
             0%, 100% { opacity: 1; transform: scale(1); }
