--- a/index.html
+++ b/index.html
@@ -3,117 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Painel ETEC - Ajuste de Visibilidade</title>
+    <title>Painel ETEC - Harmonia Total</title>
     <style>
+        /* Reset e Base */
         * { box-sizing: border-box; margin: 0; padding: 0; }
         
         body, html {
-            width: 100%; height: 100%; background: #020617;
+            width: 100%; 
+            height: 100svh; /* Usa a altura real disponível no mobile */
+            background: #020617;
             display: flex; justify-content: center; align-items: center;
-            font-family: 'Segoe UI', Roboto, sans-serif; color: #ffffff; overflow: hidden;
+            font-family: 'Segoe UI', Roboto, -apple-system, sans-serif;
+            color: #ffffff; overflow: hidden;
         }
 
         .screen {
             display: flex; flex-direction: column; 
-            width: 100vw; height: 100vh;
-            background: linear-gradient(135deg, #7f1d1d, #1f2937);
+            width: 100vw; height: 100svh;
+            background: linear-gradient(145deg, #7f1d1d, #111827);
             overflow: hidden;
         }
 
-        /* HEADER */
+        /* CABEÇALHO: Prioridade visual 1 */
         .header { 
-            flex: 1.5; /* Aumentado para dar mais destaque à parte superior */
-            background: #991b1b; 
+            flex: 2; /* Ocupa a maior parte da tela */
+            background: rgba(153, 27, 27, 0.8);
+            backdrop-filter: blur(10px);
             text-align: center; 
             display: flex; flex-direction: column; justify-content: center;
-            padding: 1.5vh 2vw; 
-            border-bottom: 6px solid #fde047; 
+            padding: 1vh 2vw; 
+            border-bottom: 4px solid #fde047; 
         }
 
         .header h1, .section h2 { 
-            font-size: clamp(1.1rem, 5vh, 3.5rem); 
+            font-size: clamp(1rem, 4vh, 3rem); 
             text-transform: uppercase; 
             font-weight: 900; 
             letter-spacing: 1px;
+            opacity: 0.9;
         }
 
         .senha-principal { 
-            font-size: clamp(4rem, 35vh, 25rem); 
+            font-size: clamp(4rem, 28vh, 22rem); 
             font-weight: 900; color: #fde047; 
-            line-height: 0.8; margin: 0.5vh 0;
-            text-shadow: 5px 5px 0px rgba(0,0,0,0.5); 
+            line-height: 0.85; margin: 0.5vh 0;
+            text-shadow: 0 10px 20px rgba(0,0,0,0.4); 
         }
 
-        /* SETOR SUPERIOR AMPLIADO */
         .setor-principal { 
-            font-size: clamp(1.8rem, 9vh, 6rem); /* Aumentado conforme solicitado */
-            font-weight: 800; 
-            text-transform: uppercase;
-            color: #ffffff;
-            margin-top: 1vh;
+            font-size: clamp(1.4rem, 7vh, 5.5rem); 
+            font-weight: 800; text-transform: uppercase;
+            color: #fff;
         }
 
+        /* CONTEÚDO: Retângulos Achatados e Proporcionais */
         .content { 
             flex: 0 0 auto; 
-            height: 20vh; 
-            display: flex; gap: 1.5vmin; padding: 1.5vmin; 
+            height: 18vh; /* Altura controlada para não empurrar o resto */
+            display: flex; gap: 12px; padding: 12px; 
         }
 
         .section { 
-            flex: 1; background: #f3f4f6; color: #000; border-radius: 12px; 
+            flex: 1; background: rgba(243, 244, 246, 0.95); 
+            color: #111; border-radius: 12px; 
             display: flex; flex-direction: column; justify-content: center; align-items: center; 
-            padding: 1vh;
+            padding: 5px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
 
         .info { 
-            font-size: clamp(0.9rem, 3.8vh, 2.2rem); 
-            font-weight: bold; 
+            font-size: clamp(0.8rem, 3.2vh, 1.8rem); 
+            font-weight: 700; 
+            line-height: 1.2;
         }
         .info strong { color: #991b1b; }
 
+        /* CONTROLES: Auto-ajuste para Mobile */
         .controls { 
-            flex: 0 0 auto; background: #020617; 
-            padding: 1.5vh; display: flex; flex-wrap: wrap; gap: 1vh; 
+            flex: 0 0 auto; 
+            background: rgba(2, 6, 23, 0.9); 
+            padding: 12px; 
+            display: flex; justify-content: center; align-items: center;
+            gap: 10px;
         }
 
         button {
-            font-size: clamp(0.65rem, 2vh, 1.2rem); 
-            padding: 1.5vh 1vw; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; 
-            flex: 1; min-width: 100px; 
+            font-size: clamp(0.7rem, 1.8vh, 1.1rem); 
+            padding: 12px 8px; border: none; border-radius: 8px; 
+            cursor: pointer; font-weight: bold; 
+            flex: 1; max-width: 200px;
             display: flex; align-items: center; justify-content: center;
+            transition: all 0.2s;
         }
+        button:active { transform: scale(0.95); }
 
         .doc { background: #dc2626; color: #fff; }
-        .mat { background: #334155; color: #fff; }
-        .reset { background: #f59e0b; color: #000; }
+        .mat { background: #374151; color: #fff; }
+        .reset { background: #eab308; color: #000; }
 
-        /* RODAPÉ AJUSTADO E AMPLIADO */
+        /* RODAPÉ: Otimizado para Mobile */
         .footer { 
-            flex: 0 0 auto; 
-            background: #000; 
-            text-align: center; 
-            padding: 1.5vh 2vw; /* Mais respiro para não colar na borda */
-            font-weight: 900; 
-            /* Tamanho da fonte aumentado */
-            font-size: clamp(0.7rem, 2vh, 1.2rem); 
-            color: #ffffff; 
-            border-top: 1px solid #334155;
-            white-space: nowrap; /* Evita quebra de linha que causa o corte visual */
-            overflow: hidden;
-            text-overflow: ellipsis; /* Se a tela for minúscula, ele encurta graciosamente */
+            flex: 0 0 auto; background: #000; text-align: center; 
+            padding: 10px 5px; 
+            font-weight: 700; 
+            font-size: clamp(0.65rem, 1.8vh, 1rem); 
+            color: rgba(255,255,255,0.7);
+            border-top: 1px solid #1e293b;
+            letter-spacing: 0.3px;
         }
 
+        /* Ajustes Mobile (Portrait) */
         @media (max-width: 600px) and (orientation: portrait) {
-            .header { flex: 2.5; }
-            .content { height: 30vh; flex-direction: column; }
-            .setor-principal { font-size: 5vh; } /* Ajuste fino para celular */
-            .footer { font-size: 1.5vh; white-space: normal; } /* Permite quebra apenas se muito necessário em telas minúsculas */
+            .header { flex: 3; }
+            .content { height: 28vh; flex-direction: column; gap: 8px; }
+            .controls { padding: 8px; }
+            button { padding: 10px 5px; min-width: 80px; }
+            .footer { padding-bottom: 15px; } /* Espaço extra para barras de navegação mobile */
         }
 
+        /* Animação */
         .piscar { animation: flash 0.6s ease-in-out 3; }
         @keyframes flash {
             0%, 100% { opacity: 1; transform: scale(1); }
-            50% { opacity: 0.4; transform: scale(1.02); }
+            50% { opacity: 0.3; transform: scale(1.02); color: #fff; }
         }
     </style>
 </head>
@@ -144,6 +156,7 @@
         <button class="mat" id="btnMat">📝 Matrícula</button>
         <button class="reset" id="btnReset">🔄 Redefinir</button>
     </div>
+    
     <div class="footer">Etec Sylvio de Mattos Carvalho • Centro Paula Souza</div>
 </div>
 
@@ -172,7 +185,7 @@
         const el = document.getElementById('senha');
         el.classList.remove('piscar'); void el.offsetWidth; el.classList.add('piscar');
         const audio = document.getElementById('tindon');
-        audio.pause(); audio.currentTime = 0; audio.play().catch(()=>{});
+        audio.play().catch(()=>{});
         if ('speechSynthesis' in window) {
             window.speechSynthesis.cancel();
             const m = new SpeechSynthesisUtterance(`Senha ${s}, setor ${set}`);
